Now update Stopwatch application

--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
                         <button id="start" class="mt-5 btn btn-outline-primary btn-lg " onclick="start()">Start</button>
                         <button id="pause" class="mt-5 btn btn-outline-primary btn-lg" onclick="pause()">Pause</button>
                         <button id="reset" class="mt-5 btn btn-outline-primary btn-lg" onclick="reset()">Reset</button>
-                        <button class="mx-auto w-50 btn btn-outline-primary btn-lg btn-block mt-4" onclick="lap()">Lap</button>
+                        <button class="mx-auto w-50 btn btn-outline-primary btn-lg btn-block mt-4"
+                            onclick="lap()">Lap</button>
                     </div>
-                    <div>
-                        <h2 id="lap-result" class="lap text-light mt-2"> </h2>
-                    </div>
+
                 </div>
             </div>
         </div>
     </div>
-
+    <div>
+        <h2 id="lap-result" class="lap text-light mt-2 text-dark"> </h2>
+    </div>
 
 
     <script src="app.js"></script>
